--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-native": "0.72.6",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-vector-icons": "^10.0.1",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
